--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 18:05:16 2018</p>
+         Last Run: Thu Jul 12 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
-                        <td>0</td>
-                        <td>31</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>SSE</td>
-                        <td>28</td>
-                     </tr>
-                     <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>23</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +46,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>17</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM",
              "09:00 PM"
            ],
@@ -106,7 +93,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "26",
                  "25",
                  "23"
                ]
@@ -117,7 +103,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "26",
                  "25",
                  "23"
                ]
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM",
              "09:00 PM"
            ],
@@ -171,7 +155,6 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -180,9 +163,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "34",
-                 "40"
+                 "35",
+                 "41"
                ]
              },
              {
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "23",
-                 "17"
+                 "19",
+                 "15"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 18:05:16 2018</p>
+         Last Run: Thu Jul 12 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -237,9 +218,9 @@
                         <td>11</td>
                         <td>66</td>
                         <td>3</td>
-                        <td>16</td>
-                        <td>NNW</td>
-                        <td>45</td>
+                        <td>14</td>
+                        <td>NW</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -247,11 +228,11 @@
                         <td>14</td>
                         <td>14</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>5</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>44</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -261,9 +242,9 @@
                         <td>0</td>
                         <td>46</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
-                        <td>42</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -275,7 +256,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>48</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -285,9 +266,9 @@
                         <td>15</td>
                         <td>39</td>
                         <td>7</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
-                        <td>48</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -416,7 +397,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "66",
-                 "57",
+                 "56",
                  "46",
                  "41",
                  "39"
@@ -427,11 +408,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "45",
                  "44",
                  "42",
-                 "48",
-                 "48"
+                 "40",
+                 "46",
+                 "45"
                ]
              }
            ]
@@ -448,7 +429,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 18:05:16 2018</p>
+         Last Run: Thu Jul 12 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -473,7 +454,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>52</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
@@ -509,7 +490,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>6</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -525,7 +506,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -653,10 +634,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
+                 "52",
                  "45",
                  "41",
-                 "38",
+                 "37",
                  "35"
                ]
              },
@@ -669,7 +650,7 @@
                  "5",
                  "11",
                  "14",
-                 "11"
+                 "12"
                ]
              }
            ]
@@ -686,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 18:05:16 2018</p>
+         Last Run: Thu Jul 12 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -727,7 +708,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>5</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -739,7 +720,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
-                        <td>9</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -868,8 +849,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
-                 "5",
-                 "9"
+                 "1",
+                 "2"
                ]
              }
            ]
@@ -886,7 +867,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 18:05:16 2018</p>
+         Last Run: Thu Jul 12 19:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -910,36 +891,36 @@
                         <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>5</td>
-                        <td>35</td>
+                        <td>24</td>
+                        <td>36</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>23</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>5</td>
-                        <td>40</td>
+                        <td>24</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>24</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>24</td>
-                        <td>48</td>
+                        <td>36</td>
+                        <td>50</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ENE</td>
-                        <td>23</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -1047,9 +1028,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "24"
+                 "24",
+                 "24",
+                 "36"
                ]
              },
              {
@@ -1057,9 +1038,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "40",
-                 "48"
+                 "36",
+                 "42",
+                 "50"
                ]
              },
              {
@@ -1067,9 +1048,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "24",
-                 "23"
+                 "27",
+                 "40",
+                 "50"
                ]
              }
            ]
