--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 21:05:19 2018</p>
+         Last Run: Thu Jul 12 22:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>12</td>
                         <td>12</td>
                         <td>11</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>3</td>
                         <td>14</td>
                         <td>NW</td>
-                        <td>44</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -74,7 +74,7 @@
                         <td>7</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -82,7 +82,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>15</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>7</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "65",
                  "56",
                  "46",
                  "41",
-                 "39"
+                 "38"
                ]
              },
              {
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
+                 "43",
                  "42",
                  "40",
-                 "46",
+                 "45",
                  "45"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 21:05:19 2018</p>
+         Last Run: Thu Jul 12 22:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>1</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
@@ -298,9 +298,9 @@
                         <td>0</td>
                         <td>42</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>11</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -308,11 +308,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>14</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -320,10 +320,10 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>SSE</td>
+                        <td>SE</td>
                         <td>11</td>
                      </tr>
                   </tbody>
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "53",
                  "46",
                  "42",
-                 "38",
-                 "36"
+                 "37",
+                 "35"
                ]
              },
              {
@@ -464,10 +464,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "1",
+                 "2",
                  "5",
-                 "11",
-                 "14",
+                 "13",
+                 "12",
                  "11"
                ]
              }
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 21:05:19 2018</p>
+         Last Run: Thu Jul 12 22:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -510,9 +510,9 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SE</td>
                         <td>0</td>
                      </tr>
@@ -522,7 +522,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
@@ -534,7 +534,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>0</td>
                         <td>14</td>
                         <td>SE</td>
@@ -656,9 +656,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "25",
-                 "28",
-                 "33"
+                 "24",
+                 "27",
+                 "32"
                ]
              },
              {
@@ -685,7 +685,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 21:05:19 2018</p>
+         Last Run: Thu Jul 12 22:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -706,22 +706,22 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Clear</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>30</td>
+                        <td>24</td>
                         <td>36</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>35</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>30</td>
+                        <td>24</td>
                         <td>42</td>
                         <td>0</td>
                         <td>14</td>
@@ -736,7 +736,7 @@
                         <td>36</td>
                         <td>49</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>ENE</td>
                         <td>50</td>
                      </tr>
@@ -846,8 +846,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "30",
-                 "30",
+                 "24",
+                 "24",
                  "36"
                ]
              },
@@ -866,7 +866,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
+                 "27",
                  "39",
                  "50"
                ]
